# SpecJAX

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: ds_r1_qwen_14b.json  ds_r1_qwen_7b.json  glm47_fp8.json  glm5_fp8.json  glm_flash.json  llama_31_8b.json  llama_3b.json  minimax_m2.json  qwen25_14b.json  qwen25_7b.json  qwen25_7b_regen.json  qwen3.json  qwen3_14b.json  qwen3_32b.json  qwen3_8b.json
docs/: sglang-jax-inference-integration-plan.md
docs/hardware/: glm5-v4-32-analysis.md
docs/training/: glm-flash-eagle3.md  glm5-eagle3.md  minimax-m2-eagle3.md  qwen3-coder-next-eagle3.md
inference/: README.md  compare_results.py  run_all_benchmarks.sh  run_benchmark.sh  run_benchmark_baseline.sh  setup.sh  tpu_env.sh
inference/configs/: ds_r1_qwen_14b.env  ds_r1_qwen_7b.env  llama31_8b.env  llama32_3b.env  qwen25_14b.env  qwen25_7b.env  qwen3_14b.env  qwen3_8b.env
inference/results/: BENCHMARK_RESULTS.md  llama31_8b_baseline.json  llama31_8b_eagle3.json  llama32_3b_baseline.json  llama32_3b_eagle3.json  qwen3_8b_baseline.json  qwen3_8b_eagle3.json
scripts/: export_for_sglang.py
scripts/download/: download_ds_r1_qwen_14b.sh  download_ds_r1_qwen_7b.sh  download_minimax_m2.sh  download_models_glm47_fp8.sh  download_models_glm5.sh  download_models_qwen25_7b.sh  download_pending_models.sh
scripts/monitoring/: tpu_monitor.py
scripts/preflight/: preflight_glm47_fp8.sh  preflight_glm5.sh  preflight_jax.sh
scripts/run/: launch_all_workers_ds_r1_qwen_14b.sh  launch_all_workers_llama31_8b.sh  (+25 more)
specjax/: __init__.py  env.py  eval.py  train.py
(+21 files in other folders)
